v3.7.3:
 Users:
  - Import TS: fix the heterogeneous set of TS validation using a range of angles.
v3.7.2:
 Users:
   - Handling the matching in the ctf import(generalizing without the need to set patterns such as {TS}).
   - Refactoring the tiltserie viewer
  - Import TS, TSM and tomos: remove double underscore from both the linked filenames and the tsIds.
  - Import TS: add a validation for the case of heterogeneous sets of TS in the number of tilt images and providing the
    angular data using a range. The cases avoided with this validation prevents erratic behavior in the subsequent
    protocols.
 Developers:
  - Add to Tomogram and SetOfTomograms the attribute _ctfcorrected, the same way it was added to the tilt-series.
  - Update the TCL based on the previous point.
v3.7.1: HOTFIX - join TS bug solved (Thanks to Doulin Sheperd).
v3.7.0:
 Developers:
  - Add acquistion order attribute to the CTFTomo to provide a robust matching between tilt-images and CTFTomos.
  - Add method getTsIds to SetOfTomograms (useful when importing coordinates).
  - CTFTomoSeries: add method getCtfTomoFromTi.
  - CTFTomo: add acqOrder to the attributes list used on its copy method.
  - TiltSeriesBase - method generateTltFile expanded: optional input presentAcqOrders to manage the view exclusion.
  - Utils - add method getCommonTsAndCtfElements to intersect tilt images and CTFs based on the value of the
    attribute acquisition order, or index in case it's not present or empty (backwards compatibility)
  - SetOfCTFTomoSeries: add method getTSIds, just the same as for SetOfTiltSeries and SetOfCoordinates3D.
  - Method getTSIds methods simplified. They call now getUniqueValues instead of aggregate.

v3.6.1:
 Users:
  - Collapse the tilt-series tree by default in the tomo data viewer
  - Fix in protocol import TS: when providing mdoc files, label DividedBy2 is now only applied in the case of
    calculating it from fields MinMaxMean, PixelSpacing and CountsPerElectron (case #4).
